Rocchio part 3 add cosine similarity search function

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import TruncatedSVD\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +155,7 @@
        "[7050 rows x 3 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,54 +260,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# part 3 execute search using cosine similarity\n",
+    "# 1. Find the cosine similarity between the query and all lyrics\n",
+    "# 2. Sort the tracks by similarity\n",
+    "# 3. Return the top N tracks to the user.\n",
+    "\n",
+    "# calculate cosine similarity between every track and the lyric provided.\n",
+    "simVals = cosine_similarity(docVecs, userLsi)\n",
+    "# create a track name, track id, artist name, similarity dataframe\n",
+    "lyric_df['similarity'] = simVals\n",
+    "\n",
+    "# this step is important, \n",
+    "# the lyrics df is officially out of sync now, \n",
+    "# the indexes need to be sorted again OR two copies need to be maintained\n",
+    "sim_df = lyric_df.sort_values(by='similarity', ascending=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>track_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4077</th>\n",
+       "      <td>Eden</td>\n",
+       "      <td>Battle Beast</td>\n",
+       "      <td>68sLf8iqi43JZVw3eOdzwy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4386</th>\n",
+       "      <td>Raise Your Fists</td>\n",
+       "      <td>Battle Beast</td>\n",
+       "      <td>2tEeM4xMbMpQnhQ2rbB2Rv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4103</th>\n",
+       "      <td>Beyond the Burning Skies</td>\n",
+       "      <td>Battle Beast</td>\n",
+       "      <td>3Q0mfEn7EtB6c2Wyzz73FJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4239</th>\n",
+       "      <td>Into the Heart of Danger</td>\n",
+       "      <td>Battle Beast</td>\n",
+       "      <td>67kZ9zlALZr9rQKujKWw35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4197</th>\n",
+       "      <td>Jade</td>\n",
+       "      <td>X JAPAN</td>\n",
+       "      <td>5BtD86hovw9uud7JkQID1H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3880</th>\n",
+       "      <td>Clap Your Hands</td>\n",
+       "      <td>Kungs</td>\n",
+       "      <td>7g7OshelYRRnOSEMmisJVI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2879</th>\n",
+       "      <td>Drunk on Your Love</td>\n",
+       "      <td>Brett Eldredge</td>\n",
+       "      <td>1jNNHFZmRGXZFHlil5uhei</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4825</th>\n",
+       "      <td>The Banshee</td>\n",
+       "      <td>Enforcer</td>\n",
+       "      <td>443tWeHzgruSSaq8DuDyE3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>The High Road</td>\n",
+       "      <td>Broken Bells</td>\n",
+       "      <td>5cwN1htZyoWqZCc33f3RfE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4332</th>\n",
+       "      <td>Katana</td>\n",
+       "      <td>Enforcer</td>\n",
+       "      <td>568IRlyLDeDufcY8Kl13p2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4298</th>\n",
+       "      <td>Armageddon</td>\n",
+       "      <td>Battle Beast</td>\n",
+       "      <td>3esZe2KHu9T1QXukKzW2tf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4180</th>\n",
+       "      <td>Armageddon</td>\n",
+       "      <td>Battle Beast</td>\n",
+       "      <td>2b7UgTWwnhRFmMs9lv7ZRs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4068</th>\n",
+       "      <td>Beat the Bastards</td>\n",
+       "      <td>Accept</td>\n",
+       "      <td>5CtaBjZac81phlz5FNFI18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4145</th>\n",
+       "      <td>The Fifth Angel</td>\n",
+       "      <td>Beast In Black</td>\n",
+       "      <td>7ofu7CNmXFXOGlBqLlWqzy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4426</th>\n",
+       "      <td>Six Feet Under The Ground</td>\n",
+       "      <td>Deathlike Silence</td>\n",
+       "      <td>28z894VpeYp6BlWWMyj2kC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4217</th>\n",
+       "      <td>Place That We Call Home</td>\n",
+       "      <td>Battle Beast</td>\n",
+       "      <td>1bEpcrbWGMb9ZsOE4Ir5aE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4321</th>\n",
+       "      <td>Place That We Call Home</td>\n",
+       "      <td>Battle Beast</td>\n",
+       "      <td>1luTzGIJd60xpqTggI9xBT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5660</th>\n",
+       "      <td>vice city</td>\n",
+       "      <td>XXXTENTACION</td>\n",
+       "      <td>6MOst484piqXpzPPRRe8i5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>692</th>\n",
+       "      <td>The Feel Good Drag</td>\n",
+       "      <td>Anberlin</td>\n",
+       "      <td>5sTVykpRs4eiZKn96bZogj</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>Feel Good Drag</td>\n",
+       "      <td>Anberlin</td>\n",
+       "      <td>3EuiMoY8lTjAvIqNf8Uyr3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4554</th>\n",
+       "      <td>Ride On</td>\n",
+       "      <td>Screamer</td>\n",
+       "      <td>33H49XSPhA6DTwbBTsbE5M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4249</th>\n",
+       "      <td>Mesmerized by Fire</td>\n",
+       "      <td>Enforcer</td>\n",
+       "      <td>7uxoFgdRtjrFW98eHFQ9Xp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2865</th>\n",
+       "      <td>Hey Boy, Hey Girl</td>\n",
+       "      <td>Upchurch</td>\n",
+       "      <td>47f6eZgviwSZciXGv2iWYg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4489</th>\n",
+       "      <td>Time Machine</td>\n",
+       "      <td>Accept</td>\n",
+       "      <td>6qlm7tPiw4b83vDCh6GaZo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2911</th>\n",
+       "      <td>Lay It On Me</td>\n",
+       "      <td>Mickey Guyton</td>\n",
+       "      <td>0O9quVZcM3pNu9VPuhfY9m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3791</th>\n",
+       "      <td>Move Your Body - Tiësto Edit</td>\n",
+       "      <td>Öwnboss</td>\n",
+       "      <td>6fKNqD073GoAQwpY7xyWVK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4264</th>\n",
+       "      <td>Who's Your Daddy</td>\n",
+       "      <td>Lordi</td>\n",
+       "      <td>5Y3DFg4p4z16KB4dL2cdXm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2401</th>\n",
+       "      <td>Heart On Fire</td>\n",
+       "      <td>Eric Church</td>\n",
+       "      <td>0ysCB1Jg4hli0XlEWlipo7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2642</th>\n",
+       "      <td>Get Your Shine On</td>\n",
+       "      <td>Florida Georgia Line</td>\n",
+       "      <td>6s9ICeczYOfbHHIaSMq9jd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4350</th>\n",
+       "      <td>Behind the Moon</td>\n",
+       "      <td>Bloodbound</td>\n",
+       "      <td>0pd0QCenGh5xk0fTnFhisz</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[ 7.11647273e-02, -6.09642547e-03,  6.04691377e-02,\n",
-       "        -1.44803986e-03, -3.18537253e-02,  3.90851881e-03,\n",
-       "         1.48029911e-03, -1.69040866e-02, -4.14844889e-02,\n",
-       "        -3.59045550e-03, -1.83534099e-02,  3.13040211e-02,\n",
-       "         4.44765655e-02, -1.43040740e-03, -2.23788814e-02,\n",
-       "         4.93484762e-02,  6.49732182e-03, -2.16652048e-02,\n",
-       "        -1.75695539e-02,  3.98033689e-02,  5.34023243e-02,\n",
-       "         3.41196114e-02, -5.59653883e-03,  2.79872286e-03,\n",
-       "        -2.71257728e-02,  2.35466887e-02,  1.96964389e-02,\n",
-       "        -1.10194644e-03,  1.08624196e-02, -5.95757807e-03,\n",
-       "         7.19548376e-04, -8.06209195e-04,  2.35384462e-02,\n",
-       "         3.26576890e-02, -8.88940659e-05,  5.37283415e-03,\n",
-       "        -2.23354021e-04,  5.07858378e-03,  5.04188369e-03,\n",
-       "        -2.38474616e-02,  1.18862912e-02, -2.08163744e-02,\n",
-       "         1.40020875e-02,  2.29551317e-02,  4.86153201e-03,\n",
-       "        -2.07103041e-02, -6.93358791e-03, -2.34872681e-02,\n",
-       "         7.75909846e-03,  2.45840012e-02, -7.40716399e-04,\n",
-       "        -1.09194129e-02,  1.37269827e-02, -8.31138959e-03,\n",
-       "         1.22304880e-05,  8.62623279e-03, -5.53542153e-03,\n",
-       "         1.67409976e-02,  4.01561626e-02,  1.73007651e-02,\n",
-       "         1.49449231e-02, -1.76552833e-02,  1.10984647e-02,\n",
-       "         1.51134301e-03, -2.46866563e-03,  1.84101727e-02,\n",
-       "        -2.25915896e-02,  5.67146035e-03, -1.08522478e-02,\n",
-       "         7.56263859e-03, -1.74545506e-02,  8.43365315e-03,\n",
-       "         6.50424037e-04,  3.36893747e-03, -1.21156687e-02,\n",
-       "        -1.43502920e-02, -1.69098450e-02,  2.02883306e-02,\n",
-       "         5.98730774e-03, -2.58609033e-02,  2.97953905e-03,\n",
-       "         1.89031859e-02,  5.14271416e-03,  5.94927136e-03,\n",
-       "        -7.87153042e-03,  1.15061494e-03,  4.68736180e-03,\n",
-       "        -8.91184382e-03,  2.37003552e-02,  3.98765205e-03,\n",
-       "        -5.96594037e-04, -1.74753218e-03, -6.31075477e-03,\n",
-       "        -1.16998198e-02, -1.66787217e-02, -1.78266721e-02,\n",
-       "        -1.72970206e-02,  5.43999114e-03,  2.48075878e-02,\n",
-       "        -2.23530372e-02]])"
+       "                        track_name           artist_name  \\\n",
+       "4077                          Eden          Battle Beast   \n",
+       "4386              Raise Your Fists          Battle Beast   \n",
+       "4103      Beyond the Burning Skies          Battle Beast   \n",
+       "4239      Into the Heart of Danger          Battle Beast   \n",
+       "4197                          Jade               X JAPAN   \n",
+       "3880               Clap Your Hands                 Kungs   \n",
+       "2879            Drunk on Your Love        Brett Eldredge   \n",
+       "4825                   The Banshee              Enforcer   \n",
+       "295                  The High Road          Broken Bells   \n",
+       "4332                        Katana              Enforcer   \n",
+       "4298                    Armageddon          Battle Beast   \n",
+       "4180                    Armageddon          Battle Beast   \n",
+       "4068             Beat the Bastards                Accept   \n",
+       "4145               The Fifth Angel        Beast In Black   \n",
+       "4426     Six Feet Under The Ground     Deathlike Silence   \n",
+       "4217       Place That We Call Home          Battle Beast   \n",
+       "4321       Place That We Call Home          Battle Beast   \n",
+       "5660                     vice city          XXXTENTACION   \n",
+       "692             The Feel Good Drag              Anberlin   \n",
+       "364                 Feel Good Drag              Anberlin   \n",
+       "4554                       Ride On              Screamer   \n",
+       "4249            Mesmerized by Fire              Enforcer   \n",
+       "2865             Hey Boy, Hey Girl              Upchurch   \n",
+       "4489                  Time Machine                Accept   \n",
+       "2911                  Lay It On Me         Mickey Guyton   \n",
+       "3791  Move Your Body - Tiësto Edit               Öwnboss   \n",
+       "4264              Who's Your Daddy                 Lordi   \n",
+       "2401                 Heart On Fire           Eric Church   \n",
+       "2642             Get Your Shine On  Florida Georgia Line   \n",
+       "4350               Behind the Moon            Bloodbound   \n",
+       "\n",
+       "                    track_id  \n",
+       "4077  68sLf8iqi43JZVw3eOdzwy  \n",
+       "4386  2tEeM4xMbMpQnhQ2rbB2Rv  \n",
+       "4103  3Q0mfEn7EtB6c2Wyzz73FJ  \n",
+       "4239  67kZ9zlALZr9rQKujKWw35  \n",
+       "4197  5BtD86hovw9uud7JkQID1H  \n",
+       "3880  7g7OshelYRRnOSEMmisJVI  \n",
+       "2879  1jNNHFZmRGXZFHlil5uhei  \n",
+       "4825  443tWeHzgruSSaq8DuDyE3  \n",
+       "295   5cwN1htZyoWqZCc33f3RfE  \n",
+       "4332  568IRlyLDeDufcY8Kl13p2  \n",
+       "4298  3esZe2KHu9T1QXukKzW2tf  \n",
+       "4180  2b7UgTWwnhRFmMs9lv7ZRs  \n",
+       "4068  5CtaBjZac81phlz5FNFI18  \n",
+       "4145  7ofu7CNmXFXOGlBqLlWqzy  \n",
+       "4426  28z894VpeYp6BlWWMyj2kC  \n",
+       "4217  1bEpcrbWGMb9ZsOE4Ir5aE  \n",
+       "4321  1luTzGIJd60xpqTggI9xBT  \n",
+       "5660  6MOst484piqXpzPPRRe8i5  \n",
+       "692   5sTVykpRs4eiZKn96bZogj  \n",
+       "364   3EuiMoY8lTjAvIqNf8Uyr3  \n",
+       "4554  33H49XSPhA6DTwbBTsbE5M  \n",
+       "4249  7uxoFgdRtjrFW98eHFQ9Xp  \n",
+       "2865  47f6eZgviwSZciXGv2iWYg  \n",
+       "4489  6qlm7tPiw4b83vDCh6GaZo  \n",
+       "2911  0O9quVZcM3pNu9VPuhfY9m  \n",
+       "3791  6fKNqD073GoAQwpY7xyWVK  \n",
+       "4264  5Y3DFg4p4z16KB4dL2cdXm  \n",
+       "2401  0ysCB1Jg4hli0XlEWlipo7  \n",
+       "2642  6s9ICeczYOfbHHIaSMq9jd  \n",
+       "4350  0pd0QCenGh5xk0fTnFhisz  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sim_df.head(30)[['track_name', 'artist_name', 'track_id']]"
+   ]
   }
  ],
  "metadata": {
