Rocchio part 4 apply weights and update search vector

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from collections import defaultdict\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +157,7 @@
        "[7050 rows x 3 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,17 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "lsiObj = TruncatedSVD(n_components=num_concepts, random_state=42)\n",
-    "docVecs = lsiObj.fit_transform(docTermMat)"
+    "docVecs = lsiObj.fit_transform(docTermMat)\n",
+    "# create a dataframe where the track id is the index the docVecs are the rows.\n",
+    "track_vec_dict = defaultdict(list)\n",
+    "track_ids = lyric_df['track_id'].values\n",
+    "track_vec_dict = {track_ids[i]: docVecs[i] for i in range(len(track_ids))}\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,298 +285,67 @@
     "# the lyrics df is officially out of sync now, \n",
     "# the indexes need to be sorted again OR two copies need to be maintained\n",
     "sim_df = lyric_df.sort_values(by='similarity', ascending=False)\n",
-    "\n"
+    "user_playlist = sim_df.head(30)[['track_name', 'artist_name', 'track_id']]\n",
+    "# initialize a feedback column and set every row to 0.\n",
+    "user_playlist['feedback'] = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>track_name</th>\n",
-       "      <th>artist_name</th>\n",
-       "      <th>track_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4077</th>\n",
-       "      <td>Eden</td>\n",
-       "      <td>Battle Beast</td>\n",
-       "      <td>68sLf8iqi43JZVw3eOdzwy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4386</th>\n",
-       "      <td>Raise Your Fists</td>\n",
-       "      <td>Battle Beast</td>\n",
-       "      <td>2tEeM4xMbMpQnhQ2rbB2Rv</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4103</th>\n",
-       "      <td>Beyond the Burning Skies</td>\n",
-       "      <td>Battle Beast</td>\n",
-       "      <td>3Q0mfEn7EtB6c2Wyzz73FJ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4239</th>\n",
-       "      <td>Into the Heart of Danger</td>\n",
-       "      <td>Battle Beast</td>\n",
-       "      <td>67kZ9zlALZr9rQKujKWw35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4197</th>\n",
-       "      <td>Jade</td>\n",
-       "      <td>X JAPAN</td>\n",
-       "      <td>5BtD86hovw9uud7JkQID1H</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3880</th>\n",
-       "      <td>Clap Your Hands</td>\n",
-       "      <td>Kungs</td>\n",
-       "      <td>7g7OshelYRRnOSEMmisJVI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2879</th>\n",
-       "      <td>Drunk on Your Love</td>\n",
-       "      <td>Brett Eldredge</td>\n",
-       "      <td>1jNNHFZmRGXZFHlil5uhei</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4825</th>\n",
-       "      <td>The Banshee</td>\n",
-       "      <td>Enforcer</td>\n",
-       "      <td>443tWeHzgruSSaq8DuDyE3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>The High Road</td>\n",
-       "      <td>Broken Bells</td>\n",
-       "      <td>5cwN1htZyoWqZCc33f3RfE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4332</th>\n",
-       "      <td>Katana</td>\n",
-       "      <td>Enforcer</td>\n",
-       "      <td>568IRlyLDeDufcY8Kl13p2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4298</th>\n",
-       "      <td>Armageddon</td>\n",
-       "      <td>Battle Beast</td>\n",
-       "      <td>3esZe2KHu9T1QXukKzW2tf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4180</th>\n",
-       "      <td>Armageddon</td>\n",
-       "      <td>Battle Beast</td>\n",
-       "      <td>2b7UgTWwnhRFmMs9lv7ZRs</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4068</th>\n",
-       "      <td>Beat the Bastards</td>\n",
-       "      <td>Accept</td>\n",
-       "      <td>5CtaBjZac81phlz5FNFI18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4145</th>\n",
-       "      <td>The Fifth Angel</td>\n",
-       "      <td>Beast In Black</td>\n",
-       "      <td>7ofu7CNmXFXOGlBqLlWqzy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4426</th>\n",
-       "      <td>Six Feet Under The Ground</td>\n",
-       "      <td>Deathlike Silence</td>\n",
-       "      <td>28z894VpeYp6BlWWMyj2kC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4217</th>\n",
-       "      <td>Place That We Call Home</td>\n",
-       "      <td>Battle Beast</td>\n",
-       "      <td>1bEpcrbWGMb9ZsOE4Ir5aE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4321</th>\n",
-       "      <td>Place That We Call Home</td>\n",
-       "      <td>Battle Beast</td>\n",
-       "      <td>1luTzGIJd60xpqTggI9xBT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5660</th>\n",
-       "      <td>vice city</td>\n",
-       "      <td>XXXTENTACION</td>\n",
-       "      <td>6MOst484piqXpzPPRRe8i5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>692</th>\n",
-       "      <td>The Feel Good Drag</td>\n",
-       "      <td>Anberlin</td>\n",
-       "      <td>5sTVykpRs4eiZKn96bZogj</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>Feel Good Drag</td>\n",
-       "      <td>Anberlin</td>\n",
-       "      <td>3EuiMoY8lTjAvIqNf8Uyr3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4554</th>\n",
-       "      <td>Ride On</td>\n",
-       "      <td>Screamer</td>\n",
-       "      <td>33H49XSPhA6DTwbBTsbE5M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4249</th>\n",
-       "      <td>Mesmerized by Fire</td>\n",
-       "      <td>Enforcer</td>\n",
-       "      <td>7uxoFgdRtjrFW98eHFQ9Xp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2865</th>\n",
-       "      <td>Hey Boy, Hey Girl</td>\n",
-       "      <td>Upchurch</td>\n",
-       "      <td>47f6eZgviwSZciXGv2iWYg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4489</th>\n",
-       "      <td>Time Machine</td>\n",
-       "      <td>Accept</td>\n",
-       "      <td>6qlm7tPiw4b83vDCh6GaZo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2911</th>\n",
-       "      <td>Lay It On Me</td>\n",
-       "      <td>Mickey Guyton</td>\n",
-       "      <td>0O9quVZcM3pNu9VPuhfY9m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3791</th>\n",
-       "      <td>Move Your Body - Tiësto Edit</td>\n",
-       "      <td>Öwnboss</td>\n",
-       "      <td>6fKNqD073GoAQwpY7xyWVK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4264</th>\n",
-       "      <td>Who's Your Daddy</td>\n",
-       "      <td>Lordi</td>\n",
-       "      <td>5Y3DFg4p4z16KB4dL2cdXm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2401</th>\n",
-       "      <td>Heart On Fire</td>\n",
-       "      <td>Eric Church</td>\n",
-       "      <td>0ysCB1Jg4hli0XlEWlipo7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2642</th>\n",
-       "      <td>Get Your Shine On</td>\n",
-       "      <td>Florida Georgia Line</td>\n",
-       "      <td>6s9ICeczYOfbHHIaSMq9jd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4350</th>\n",
-       "      <td>Behind the Moon</td>\n",
-       "      <td>Bloodbound</td>\n",
-       "      <td>0pd0QCenGh5xk0fTnFhisz</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        track_name           artist_name  \\\n",
-       "4077                          Eden          Battle Beast   \n",
-       "4386              Raise Your Fists          Battle Beast   \n",
-       "4103      Beyond the Burning Skies          Battle Beast   \n",
-       "4239      Into the Heart of Danger          Battle Beast   \n",
-       "4197                          Jade               X JAPAN   \n",
-       "3880               Clap Your Hands                 Kungs   \n",
-       "2879            Drunk on Your Love        Brett Eldredge   \n",
-       "4825                   The Banshee              Enforcer   \n",
-       "295                  The High Road          Broken Bells   \n",
-       "4332                        Katana              Enforcer   \n",
-       "4298                    Armageddon          Battle Beast   \n",
-       "4180                    Armageddon          Battle Beast   \n",
-       "4068             Beat the Bastards                Accept   \n",
-       "4145               The Fifth Angel        Beast In Black   \n",
-       "4426     Six Feet Under The Ground     Deathlike Silence   \n",
-       "4217       Place That We Call Home          Battle Beast   \n",
-       "4321       Place That We Call Home          Battle Beast   \n",
-       "5660                     vice city          XXXTENTACION   \n",
-       "692             The Feel Good Drag              Anberlin   \n",
-       "364                 Feel Good Drag              Anberlin   \n",
-       "4554                       Ride On              Screamer   \n",
-       "4249            Mesmerized by Fire              Enforcer   \n",
-       "2865             Hey Boy, Hey Girl              Upchurch   \n",
-       "4489                  Time Machine                Accept   \n",
-       "2911                  Lay It On Me         Mickey Guyton   \n",
-       "3791  Move Your Body - Tiësto Edit               Öwnboss   \n",
-       "4264              Who's Your Daddy                 Lordi   \n",
-       "2401                 Heart On Fire           Eric Church   \n",
-       "2642             Get Your Shine On  Florida Georgia Line   \n",
-       "4350               Behind the Moon            Bloodbound   \n",
-       "\n",
-       "                    track_id  \n",
-       "4077  68sLf8iqi43JZVw3eOdzwy  \n",
-       "4386  2tEeM4xMbMpQnhQ2rbB2Rv  \n",
-       "4103  3Q0mfEn7EtB6c2Wyzz73FJ  \n",
-       "4239  67kZ9zlALZr9rQKujKWw35  \n",
-       "4197  5BtD86hovw9uud7JkQID1H  \n",
-       "3880  7g7OshelYRRnOSEMmisJVI  \n",
-       "2879  1jNNHFZmRGXZFHlil5uhei  \n",
-       "4825  443tWeHzgruSSaq8DuDyE3  \n",
-       "295   5cwN1htZyoWqZCc33f3RfE  \n",
-       "4332  568IRlyLDeDufcY8Kl13p2  \n",
-       "4298  3esZe2KHu9T1QXukKzW2tf  \n",
-       "4180  2b7UgTWwnhRFmMs9lv7ZRs  \n",
-       "4068  5CtaBjZac81phlz5FNFI18  \n",
-       "4145  7ofu7CNmXFXOGlBqLlWqzy  \n",
-       "4426  28z894VpeYp6BlWWMyj2kC  \n",
-       "4217  1bEpcrbWGMb9ZsOE4Ir5aE  \n",
-       "4321  1luTzGIJd60xpqTggI9xBT  \n",
-       "5660  6MOst484piqXpzPPRRe8i5  \n",
-       "692   5sTVykpRs4eiZKn96bZogj  \n",
-       "364   3EuiMoY8lTjAvIqNf8Uyr3  \n",
-       "4554  33H49XSPhA6DTwbBTsbE5M  \n",
-       "4249  7uxoFgdRtjrFW98eHFQ9Xp  \n",
-       "2865  47f6eZgviwSZciXGv2iWYg  \n",
-       "4489  6qlm7tPiw4b83vDCh6GaZo  \n",
-       "2911  0O9quVZcM3pNu9VPuhfY9m  \n",
-       "3791  6fKNqD073GoAQwpY7xyWVK  \n",
-       "4264  5Y3DFg4p4z16KB4dL2cdXm  \n",
-       "2401  0ysCB1Jg4hli0XlEWlipo7  \n",
-       "2642  6s9ICeczYOfbHHIaSMq9jd  \n",
-       "4350  0pd0QCenGh5xk0fTnFhisz  "
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sim_df.head(30)[['track_name', 'artist_name', 'track_id']]"
+    "# simulate user input here\n",
+    "feedback = [np.random.randint(0,3) for i in range(len(user_playlist))]\n",
+    "user_playlist['feedback'] = feedback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PROCESS 4 Rochhio Feedback Filtering\n",
+    "# 1. Group user feeback by love, nuetral, dislike\n",
+    "# 2. Calculate the mean for each group\n",
+    "# 3. Apply alpha, beta, gamma, and phi to:\n",
+    "#       Original search, loves, hates, nuetral\n",
+    "# 4. Update the lyric search querry vector and return new results!\n",
+    "\n",
+    "# tuning parameters\n",
+    "# original querry gets no penalty\n",
+    "alpha = 1.0\n",
+    "# loved songs get a beta positive weight.\n",
+    "beta = 0.75\n",
+    "# disliked songs get a gamma negative weight\n",
+    "gamma = 0.25\n",
+    "# nuetral songs get a phi positive weight\n",
+    "phi = 0.5\n",
+    "\n",
+    "# create a mean vector dict for all 3 states\n",
+    "meanVectDict = defaultdict(list)\n",
+    "\n",
+    "# iterate through the three states nuetral[0], dislike[1], love[2]\n",
+    "for i in range(3):\n",
+    "    temp_tracks = user_playlist[user_playlist['feedback']==i]\n",
+    "    if len(temp_tracks) > 0:\n",
+    "        # this means that tracks with this sentiment exist.\n",
+    "        # we can go get the track vectors from the track_vec_dict\n",
+    "        tempVecs = [track_vec_dict[vec] for vec in temp_tracks['track_id']]\n",
+    "        # next we need to calculate the mean vector for this segment\n",
+    "        meanVec = np.mean(tempVecs, axis=0)\n",
+    "        # add this mean to the mean vect dict. The key is the state.\n",
+    "        meanVectDict[i] = meanVec\n",
+    "    else:\n",
+    "        # if there are no tracks in this state, set its mean to 0\n",
+    "        meanVectDict[i] = 0\n",
+    "\n",
+    "# calcualte the new query vector by summing all of the mean vectors together\n",
+    "newQueryVec = alpha*userLsi + beta * meanVectDict[2] + gamma * meanVectDict[1] + phi * meanVectDict[0]\n",
+    "\n",
+    "        \n"
    ]
   }
  ],
