add a cell for step 5 development

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -347,6 +347,15 @@
     "\n",
     "        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STEP 5 convert the notebook into functions and create a loop!"
+   ]
   }
  ],
  "metadata": {
