fix rocchio calculation to subtract disliked songs

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -343,7 +343,7 @@
     "        meanVectDict[i] = 0\n",
     "\n",
     "# calcualte the new query vector by summing all of the mean vectors together\n",
-    "newQueryVec = alpha*userLsi + beta * meanVectDict[2] + gamma * meanVectDict[1] + phi * meanVectDict[0]\n",
+    "newQueryVec = alpha*userLsi + beta * meanVectDict[2] - gamma * meanVectDict[1] + phi * meanVectDict[0]\n",
     "\n",
     "        \n"
    ]
